<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Obrigações</string>

    <string name="title_home">Minhas obrigações</string>
    <string name="title_cadastro">Nova obrigação</string>
    <string name="title_detalhes">Detalhes</string>
    <string name="title_notificacao">Notificação</string>
    <string name="title_lista_notificacoes">Notificações</string>
    <string name="lista_vazia">Nenhuma notificação encontrada.</string>

    <string name="label_descricao">Descrição</string>
    <string name="label_valor">Valor</string>
    <string name="label_favorecido">Favorecido</string>
    <string name="label_tipo">Tipo</string>
    <string name="label_vencimento">Data de vencimento</string>

    <string name="tipo_pagar">A pagar</string>
    <string name="tipo_receber">A receber</string>

    <string name="btn_salvar">Salvar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_marcar_paga">Marcar como paga</string>
    <string name="btn_configurar_notificacao">Configurar notificação</string>
    <string name="btn_ativar_notificacao">Ativar notificação</string>

    <string name="status_pago">paga</string>
    <string name="status_pendente">pendente</string>
    <string name="status_atrasado">atrasado</string>

    <string name="opcao_no_dia">No dia</string>
    <string name="opcao_1_dia_antes">1 dia antes</string>
    <string name="opcao_3_dias_antes">3 dias antes</string>
    <string name="opcao_personalizado">Personalizado</string>
    <string name="hint_dias_antes">Quantos dias antes? (1 a 365)</string>
    <string name="erro_dias_antes">Informe um número de 1 a 365</string>

    <string name="selecionar_data_hora">Selecionar data e hora</string>
    <string name="canal_notificacoes">Notificações de obrigações</string>
</resources>
